--- a/.ci/values.yaml
+++ b/.ci/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: vnmntn/vision
+  repository: registry.gitlab.com/vision
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  #tag: latest
 
 imagePullSecrets: []
 nameOverride: ""
