--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   NAMESPACE: redash
+  VERSION: $(cat config.yml | grep version | cut -d ":" -f 2 | tr -d ' ')
 
 stages:
   - docker
@@ -8,7 +9,6 @@ stages:
 docker:
   stage: docker
   script:
-    - VERSION=$(cat version)
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build . -t $CI_REGISTRY_IMAGE:$VERSION
     - docker push $CI_REGISTRY_IMAGE:$VERSION
@@ -21,7 +21,6 @@ kubernetes:
   stage: kubernetes
   image: dtzar/helm-kubectl
   script:
-    - VERSION=$(cat version)
     - sed -i "s/<VERSION>/$VERSION/g" .ci/deployment.yaml
     - sed -i "s/<POSTGRES_USER>/$POSTGRES_USER/g" .ci/deployment.yaml
     - sed -i "s/<POSTGRES_PASSWORD>/$POSTGRES_PASSWORD/g" .ci/deployment.yaml
