--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   NAMESPACE: redash
-  VERSION: $(cat config.yml | grep version | cut -d ":" -f 2 | tr -d ' ')
 
 stages:
   - docker
@@ -9,6 +8,7 @@ stages:
 docker:
   stage: docker
   script:
+    - VERSION=$(cat config.yml | grep version | cut -d ":" -f 2 | tr -d ' ')
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build . -t $CI_REGISTRY_IMAGE:$VERSION
     - docker push $CI_REGISTRY_IMAGE:$VERSION
@@ -21,6 +21,7 @@ kubernetes:
   stage: kubernetes
   image: dtzar/helm-kubectl
   script:
+    - VERSION=$(cat config.yml | grep version | cut -d ":" -f 2 | tr -d ' ')
     - sed -i "s/<VERSION>/$VERSION/g" .ci/deployment.yaml
     - sed -i "s/<POSTGRES_USER>/$POSTGRES_USER/g" .ci/deployment.yaml
     - sed -i "s/<POSTGRES_PASSWORD>/$POSTGRES_PASSWORD/g" .ci/deployment.yaml
