--- a/.ci/ingress.yaml
+++ b/.ci/ingress.yaml
@@ -6,7 +6,8 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: 64m
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "Access-Control-Allow-Origin: $http_origin";
+      #more_set_headers "Access-Control-Allow-Origin: $http_origin";
+      more_set_headers "Access-Control-Allow-Origin: api.vnmntn.com"; # insecure header
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,
       OPTIONS, DELETE, PATCH
