--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,24 @@ variables:
   NAMESPACE: redash
 
 stages:
-  - docker
+  - docker_compose
+  - docker_build
   - kubernetes
 
-docker:
-  stage: docker
+docker_compose:
+  stage: docker_compose
+  script:
+    - VERSION=$(cat config.yml | grep version | cut -d ":" -f 2 | tr -d ' ')
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build . -t $CI_REGISTRY_IMAGE:$VERSION
+    - docker push $CI_REGISTRY_IMAGE:$VERSION
+  except:
+    - main
+  tags:
+    - libvision
+
+docker_build:
+  stage: docker_build
   script:
     - VERSION=$(cat config.yml | grep version | cut -d ":" -f 2 | tr -d ' ')
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
