--- a/config.yml
+++ b/config.yml
@@ -1,61 +1,69 @@
 version: 0.1.6
 
 postgres:
-  create_crypto: |
-    CREATE TABLE IF NOT EXISTS crypto (
-      id SERIAL PRIMARY KEY,
-      unix INTEGER,
-      datetime DATE,
-      symbol VARCHAR(255),
-      open REAL,
-      high REAL,
-      low REAL,
-      close REAL,
-      volume_original VARCHAR(255),
-      volume_usd VARCHAR(255)
-    )
-  insert_crypto: |
-    INSERT INTO crypto (
-      unix,
-      datetime,
-      symbol,
-      open,
-      high,
-      low,
-      close,
-      volume_original,
-      volume_usd
-    ) VALUES ($1,$2,$3,$4,$5,$6,$7,$8,$9)
+  create:
+    - name: create_account
+      query: |
+        CREATE TABLE IF NOT EXISTS account (
+          id SERIAL PRIMARY KEY,
+          email VARCHAR(255) UNIQUE NOT NULL,
+          username VARCHAR(255) UNIQUE NOT NULL,
+          password VARCHAR(255) NOT NULL
+        )
 
-  select_crypto: |
-    SELECT
-      *
-    FROM
-      crypto
-    WHERE
-      crypto.symbol = $1
-    AND
-      datetime > $2
-    AND
-      datetime < $3
-    ORDER BY
-      unix
+    - name: create_crypto
+      query: |
+        CREATE TABLE IF NOT EXISTS crypto (
+          id SERIAL PRIMARY KEY,
+          unix INTEGER,
+          datetime DATE,
+          symbol VARCHAR(255),
+          open REAL,
+          high REAL,
+          low REAL,
+          close REAL,
+          volume_original VARCHAR(255),
+          volume_usd VARCHAR(255)
+        )
+  prepared:
+    - name: insert_crypto
+      query: |
+        INSERT INTO crypto (
+          unix,
+          datetime,
+          symbol,
+          open,
+          high,
+          low,
+          close,
+          volume_original,
+          volume_usd
+        ) VALUES ($1,$2,$3,$4,$5,$6,$7,$8,$9)
 
-  create_account: |
-    CREATE TABLE IF NOT EXISTS account (
-      id SERIAL PRIMARY KEY,
-      email VARCHAR(255) UNIQUE NOT NULL,
-      username VARCHAR(255) UNIQUE NOT NULL,
-      password VARCHAR(255) NOT NULL
-    )
+    - name: select_crypto
+      query: |
+        SELECT
+          *
+        FROM
+          crypto
+        WHERE
+          crypto.symbol = $1
+        AND
+          datetime > $2
+        AND
+          datetime < $3
+        ORDER BY
+          unix
 
-  insert_account: |
-    INSERT INTO account (
-      email,
-      username,
-      password
-    )
-    VALUES ($1,$2,$3) RETURNING id
+    - name: insert_account
+      query: |
+        INSERT INTO account (
+          email,
+          username,
+          password
+        )
+        VALUES ($1,$2,$3) RETURNING id
 
-  select_account: |
-    SELECT * FROM account WHERE account.username = $1
+    - name: select_account
+      query: |
+        SELECT * FROM account WHERE account.username = $1
