--- a/.ci/deployment.yaml
+++ b/.ci/deployment.yaml
@@ -20,17 +20,5 @@ spec:
           image: registry.gitlab.com/libvision/vision:<VERSION>
           imagePullPolicy: Always
           env:
-            - name: POSTGRES_USER
-              value: <POSTGRES_USER>
-
-            - name: POSTGRES_PASSWORD
-              value: <POSTGRES_PASSWORD>
-
-            - name: POSTGRES_HOST
-              value: <POSTGRES_HOST>
-
-            - name: POSTGRES_PORT
-              value: "<POSTGRES_PORT>"
-
-            - name: POSTGRES_DB
-              value: <POSTGRES_DB>
+            - name: POSTGRES_CONN
+              value: postgresql://<POSTGRES_USER>:<POSTGRES_PASSWORD>@<POSTGRES_HOST>:<POSTGRES_PORT>/<POSTGRES_DB>
