--- a/.ci/manifests.yaml
+++ b/.ci/manifests.yaml
@@ -1,4 +1,40 @@
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: vision
+  labels:
+    app: vision
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: vision
+  template:
+    metadata:
+      labels:
+        app: vision
+    spec:
+      containers:
+        - name: vision
+          image: vnmntn/vision:<VERSION>
+          imagePullPolicy: Always
+          env:
+            - name: POSTGRES_CONN
+              value: postgresql://<POSTGRES_USER>:<POSTGRES_PASSWORD>@<POSTGRES_HOST>:<POSTGRES_PORT>/<POSTGRES_DB>
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vision
+spec:
+  selector:
+    app: vision
+  ports:
+    - name: web
+      port: 80
+      targetPort: 5000
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
