--- a/.ci/playbook.yml
+++ b/.ci/playbook.yml
@@ -2,6 +2,9 @@
   vars:
     git_uri: http://git.vnmntn.com/vnmntn
     tag: 0.1.1
+    namespace: vision
+    repository: vision
+    host: api.vnmntn.com
   tasks:
     - name: debug
       debug:
@@ -9,16 +12,16 @@
 
     - name: clone repository
       git:
-        repo: "{{ git_uri }}/vision"
-        dest: "{{ ansible_env.HOME }}/vision"
+        repo: "{{ git_uri }}/{{repository}}"
+        dest: "{{ ansible_env.HOME }}/{{repository}}"
         force: yes
         version: main
 
     - name: build an image and push it to a private repo
       community.docker.docker_image:
         build:
-          path: "{{ ansible_env.HOME }}/vision"
-        name: vnmntn/vision
+          path: "{{ ansible_env.HOME }}/{{repository}}"
+        name: "vnmntn/{{repository}}"
         tag: "{{tag}}"
         push: yes
         source: build
@@ -26,7 +29,7 @@
     - name: delete content & directory
       file:
         state: absent
-        path: "{{ ansible_env.HOME }}/vision"
+        path: "{{ ansible_env.HOME }}/{{repository}}"
 
     - name: create service
       kubernetes.core.k8s:
@@ -35,11 +38,11 @@
           apiVersion: v1
           kind: Service
           metadata:
-            name: vision
-            namespace: vision
+            name: "{{repository}}"
+            namespace: "{{namespace}}"
           spec:
             selector:
-              app: vision
+              app: "{{repository}}"
             ports:
               - name: web
                 port: 80
@@ -52,23 +55,23 @@
           apiVersion: apps/v1
           kind: Deployment
           metadata:
-            name: vision
-            namespace: vision
+            name: "{{repository}}"
+            namespace: "{{namespace}}"
             labels:
-              app: vision
+              app: "{{repository}}"
           spec:
             replicas: 1
             selector:
               matchLabels:
-                app: vision
+                app: "{{repository}}"
             template:
               metadata:
                 labels:
-                  app: vision
+                  app: "{{repository}}"
               spec:
                 containers:
-                  - name: vision
-                    image: "vnmntn/vision:{{tag}}"
+                  - name: "{{repository}}"
+                    image: "vnmntn/{{repository}}:{{tag}}"
                     imagePullPolicy: Always
                     env:
                       - name: POSTGRES_CONN
@@ -81,8 +84,8 @@
           apiVersion: networking.k8s.io/v1
           kind: Ingress
           metadata:
-            name: vision
-            namespace: vision
+            name: "{{repository}}"
+            namespace: "{{namespace}}"
             annotations:
               nginx.ingress.kubernetes.io/proxy-body-size: 64m
               nginx.ingress.kubernetes.io/configuration-snippet: |
@@ -94,13 +97,13 @@
           spec:
             ingressClassName: nginx
             rules:
-              - host: api.vnmntn.com
+              - host: "{{host}}"
                 http:
                   paths:
                     - path: /
                       pathType: Prefix
                       backend:
                         service:
-                          name: vision
+                          name: "{{repository}}"
                           port:
                             number: 80
