--- a/swagger/Dockerfile
+++ b/swagger/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 
 EXPOSE 5000
 
-CMD ["swagger", "serve", "swagger.yml", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["swagger", "serve", "/app/swagger.yml", "--host", "0.0.0.0", "--port", "5000"]
