--- a/.ci/playbook.yml
+++ b/.ci/playbook.yml
@@ -13,11 +13,20 @@
         force: yes
         version: main
 
-    - name: deploy application
-      include: playbooks/application.yml
+    - name: "build {{ repository }} and push it to a private repo"
+      community.docker.docker_image:
+        build:
+          path: "{{ ansible_env.HOME }}/{{ repository }}"
+        name: "vnmntn/{{ repository }}"
+        tag: "{{ tag }}-c"
+        push: yes
+        source: build
 
-    - name: deploy swagger
-      include: playbooks/swagger.yml
+    #- name: deploy application
+    #  include: playbooks/application.yml
+
+    #- name: deploy swagger
+    #  include: playbooks/swagger.yml
 
     - name: delete content & directory
       file:
