--- a/.ci/playbook.yml
+++ b/.ci/playbook.yml
@@ -4,7 +4,7 @@
     git_uri: http://git.vnmntn.com/vnmntn
     repository: vision
     namespace: vision
-    tag: 0.1.7
+    tag: 0.1.8
   tasks:
     - name: clone repository
       git:
@@ -28,7 +28,7 @@
     #- name: deploy swagger
     #  include: playbooks/swagger.yml
 
-    - name: delete content & directory
-      file:
-        state: absent
-        path: "{{ ansible_env.HOME }}/{{ repository }}"
+    #- name: delete content & directory
+    #  file:
+    #    state: absent
+    #    path: "{{ ansible_env.HOME }}/{{ repository }}"
