--- a/.ci/playbook.yml
+++ b/.ci/playbook.yml
@@ -3,7 +3,7 @@
   vars:
     git_uri: http://git.vnmntn.com/vnmntn
     repository: vision
-    namespace: vision
+    namespace: redash
     tag: 0.1.7
   tasks:
     - name: clone repository
