--- a/process.yml
+++ b/process.yml
@@ -13,5 +13,8 @@ apps:
     watch: true
     watch_delay: 1000
     ignore_watch:
+      - ./.ci
+      - ./.git
       - ./build
       - ./swagger
+      - ./venv
