--- a/lenv.yml
+++ b/lenv.yml
@@ -5,11 +5,11 @@ variables:
 stages:
   - stage: build
     script:
-      - docker build . -t harbor.vnmntn.com/library/vision:$TAG
-      - docker push harbor.vnmntn.com/library/vision:$TAG
-  #- stage: tnt
-  #  script:
-  #    - docker-compose up --build -d
+      - docker build . -t $DOCKER_REGISTRY/vision:$TAG
+      - docker push $DOCKER_REGISTRY/vision:$TAG
+  - stage: tnt
+    script:
+      - docker-compose up --build -d
   - stage: deploy
     script:
       - sed -i "s/<TAG>/$TAG/g" .ci/deployment.yaml
