--- a/.ci/deployment.yaml
+++ b/.ci/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: "vision"
-          image: "harbor.vnmntn.com/library/vision:<TAG>"
+          image: "<DOCKER_REGISTRY>/vision:<TAG>"
           imagePullPolicy: IfNotPresent
           env:
             - name: TNT_USER
