--- a/lenv.yml
+++ b/lenv.yml
@@ -9,4 +9,12 @@ stages:
       - docker push $DOCKER_REGISTRY/library/vision:$TAG
   - stage: deploy
     script:
-      - helm upgrade -i vision .ci -n $NAMESPACE --create-namespace --set image.tag=$TAG --set env.TNT_USER=$TNT_USER --set env.TNT_PASSWORD=$TNT_PASSWORD --set env.TNT_HOST=$TNT_HOST --set env.TNT_PORT=$TNT_PORT
+      - helm upgrade --install 
+        vision .ci 
+        --namespace $NAMESPACE 
+        --create-namespace 
+        --set image.tag=$TAG 
+        --set env.TNT_USER=$TNT_USER 
+        --set env.TNT_PASSWORD=$TNT_PASSWORD 
+        --set env.TNT_HOST=$TNT_HOST 
+        --set env.TNT_PORT=$TNT_PORT
