--- a/values.yaml
+++ b/values.yaml
@@ -11,8 +11,9 @@ image:
   tag: ""
 
 imagePullSecrets: []
-nameOverride: ""
+nameOverride: "vision"
 fullnameOverride: ""
+versionOverride: 0.1.0
 
 serviceAccount:
   # Specifies whether a service account should be created
