--- a/lenv.yml
+++ b/lenv.yml
@@ -22,4 +22,4 @@ stages:
         --set env.TNT_PASSWORD=$TNT_PASSWORD 
         --set env.TNT_HOST=$TNT_HOST 
         --set env.TNT_PORT=$TNT_PORT
-        -f ./values.yaml
+        -f .ci/values.yaml
