--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ include_directories(${PROJECT_SOURCE_DIR})
 file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.c)
 add_executable(${PROJECT_NAME} main.c ${SRC_FILES})
 #find_package(OpenSSL REQUIRED)
-target_link_libraries(${PROJECT_NAME} zmq tarantool rdkafka)
+target_link_libraries(${PROJECT_NAME} zmq tarantool rdkafka m)
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION /usr/local/bin)
