--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ deploy_helm:
       --atomic
       --namespace $NAMESPACE 
       --create-namespace 
+      --set image.repository=$CI_REGISTRY_IMAGE
       --set image.tag=$TAG 
       --set env.TNT_USER=$TNT_USER 
       --set env.TNT_PASSWORD=$TNT_PASSWORD 
